--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ configurations {
 }
 
 dependencies {
-    compile group: 'redis.clients', name: 'jedis', version: '2.8.0'
+    compile group: 'org.json', name: 'json', version: '20180130'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'co.paralleluniverse:quasar-core:0.7.9:jdk8'
